--- a/inventory_management/inventory_management.csproj
+++ b/inventory_management/inventory_management.csproj
@@ -83,6 +83,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Views\Forms\AccountsManageFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\AccountsManageFrm.Designer.cs">
+      <DependentUpon>AccountsManageFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\CategoryManageFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\CategoryManageFrm.Designer.cs">
+      <DependentUpon>CategoryManageFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\CustomersManageFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\CustomersManageFrm.Designer.cs">
+      <DependentUpon>CustomersManageFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Forms\mainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,11 +109,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Forms\IneventoryManageFrm.cs">
+    <Compile Include="Views\Forms\InventoryManageFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Forms\IneventoryManageFrm.Designer.cs">
-      <DependentUpon>IneventoryManageFrm.cs</DependentUpon>
+    <Compile Include="Views\Forms\InventoryManageFrm.Designer.cs">
+      <DependentUpon>InventoryManageFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\InventoryInfoForm.cs">
       <SubType>Form</SubType>
@@ -103,6 +121,39 @@
     <Compile Include="Views\Forms\InventoryInfoForm.Designer.cs">
       <DependentUpon>InventoryInfoForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Forms\OrderManageFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\OrderManageFrm.Designer.cs">
+      <DependentUpon>OrderManageFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\ProductManageFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\ProductManageFrm.Designer.cs">
+      <DependentUpon>ProductManageFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\SuppliersManageFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\SuppliersManageFrm.Designer.cs">
+      <DependentUpon>SuppliersManageFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Forms\TransFormFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\TransFormFrm.Designer.cs">
+      <DependentUpon>TransFormFrm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Views\Forms\AccountsManageFrm.resx">
+      <DependentUpon>AccountsManageFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\CategoryManageFrm.resx">
+      <DependentUpon>CategoryManageFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\CustomersManageFrm.resx">
+      <DependentUpon>CustomersManageFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -116,11 +167,23 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Views\Forms\IneventoryManageFrm.resx">
-      <DependentUpon>IneventoryManageFrm.cs</DependentUpon>
+    <EmbeddedResource Include="Views\Forms\InventoryManageFrm.resx">
+      <DependentUpon>InventoryManageFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\InventoryInfoForm.resx">
       <DependentUpon>InventoryInfoForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\OrderManageFrm.resx">
+      <DependentUpon>OrderManageFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\ProductManageFrm.resx">
+      <DependentUpon>ProductManageFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\SuppliersManageFrm.resx">
+      <DependentUpon>SuppliersManageFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\TransFormFrm.resx">
+      <DependentUpon>TransFormFrm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
