--- a/inventory_management/inventory_management.csproj
+++ b/inventory_management/inventory_management.csproj
@@ -84,8 +84,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logic\Services\CategoryServices.cs" />
+    <Compile Include="Logic\Services\CustomerServices.cs" />
     <Compile Include="Logic\Services\DataBase.cs" />
     <Compile Include="Logic\Services\IDataHelper.cs" />
+    <Compile Include="Logic\Services\InventoryServices.cs" />
+    <Compile Include="Logic\Services\OrderServices.cs" />
+    <Compile Include="Logic\Services\ProductServices.cs" />
+    <Compile Include="Logic\Services\SupplierServices.cs" />
+    <Compile Include="Logic\Services\UserServices.cs" />
     <Compile Include="Models\AccountModel.cs" />
     <Compile Include="Models\CategoryModel.cs" />
     <Compile Include="Models\CustomerModel.cs" />
@@ -99,10 +105,9 @@
     <Compile Include="Views\Forms\AccountsManageFrm.Designer.cs">
       <DependentUpon>AccountsManageFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Forms\CategoryManageFrm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\Forms\CategoryManageFrm.Designer.cs">
+    <Compile Include="Views\Forms\Categories\Category.cs" />
+    <Compile Include="Views\Forms\Categories\CategoryManageFrm.cs" />
+    <Compile Include="Views\Forms\Categories\CategoryManageFrm.Designer.cs">
       <DependentUpon>CategoryManageFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\CustomersManageFrm.cs">
@@ -155,11 +160,11 @@
     <Compile Include="Views\Forms\TransFormFrm.Designer.cs">
       <DependentUpon>TransFormFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Interfaces\Interface1.cs" />
+    <Compile Include="Views\Interfaces\ICategoryView.cs" />
     <EmbeddedResource Include="Views\Forms\AccountsManageFrm.resx">
       <DependentUpon>AccountsManageFrm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\Forms\CategoryManageFrm.resx">
+    <EmbeddedResource Include="Views\Forms\Categories\CategoryManageFrm.resx">
       <DependentUpon>CategoryManageFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\CustomersManageFrm.resx">
