--- a/inventory_management/inventory_management.csproj
+++ b/inventory_management/inventory_management.csproj
@@ -87,11 +87,6 @@
     <Compile Include="Logic\Services\CustomerServices.cs" />
     <Compile Include="Logic\Services\DataBase.cs" />
     <Compile Include="Logic\Services\IDataHelper.cs" />
-    <Compile Include="Logic\Services\InventoryServices.cs" />
-    <Compile Include="Logic\Services\OrderServices.cs" />
-    <Compile Include="Logic\Services\ProductServices.cs" />
-    <Compile Include="Logic\Services\SupplierServices.cs" />
-    <Compile Include="Logic\Services\UserServices.cs" />
     <Compile Include="Models\AccountModel.cs" />
     <Compile Include="Models\CategoryModel.cs" />
     <Compile Include="Models\CustomerModel.cs" />
@@ -105,9 +100,10 @@
     <Compile Include="Views\Forms\AccountsManageFrm.Designer.cs">
       <DependentUpon>AccountsManageFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Forms\Categories\Category.cs" />
-    <Compile Include="Views\Forms\Categories\CategoryManageFrm.cs" />
-    <Compile Include="Views\Forms\Categories\CategoryManageFrm.Designer.cs">
+    <Compile Include="Views\Forms\CategoryManageFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\CategoryManageFrm.Designer.cs">
       <DependentUpon>CategoryManageFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\CustomersManageFrm.cs">
@@ -164,7 +160,7 @@
     <EmbeddedResource Include="Views\Forms\AccountsManageFrm.resx">
       <DependentUpon>AccountsManageFrm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\Forms\Categories\CategoryManageFrm.resx">
+    <EmbeddedResource Include="Views\Forms\CategoryManageFrm.resx">
       <DependentUpon>CategoryManageFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\CustomersManageFrm.resx">
