--- a/inventory_management/inventory_management.csproj
+++ b/inventory_management/inventory_management.csproj
@@ -100,6 +100,13 @@
     <Compile Include="Views\Forms\AccountsManageFrm.Designer.cs">
       <DependentUpon>AccountsManageFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Forms\Categories\Category.cs" />
+    <Compile Include="Views\Forms\Categories\CategoryManageFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Categories\CategoryManageFrm.designer.cs">
+      <DependentUpon>CategoryManageFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Forms\CategoryManageFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,6 +166,9 @@
     <Compile Include="Views\Interfaces\ICategoryView.cs" />
     <EmbeddedResource Include="Views\Forms\AccountsManageFrm.resx">
       <DependentUpon>AccountsManageFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Categories\CategoryManageFrm.resx">
+      <DependentUpon>CategoryManageFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\CategoryManageFrm.resx">
       <DependentUpon>CategoryManageFrm.cs</DependentUpon>
