--- a/inventory_management/inventory_management.csproj
+++ b/inventory_management/inventory_management.csproj
@@ -127,9 +127,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Forms\InventoryManageFrm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Views\Forms\InventoryManageFrm.cs" />
     <Compile Include="Views\Forms\InventoryManageFrm.Designer.cs">
       <DependentUpon>InventoryManageFrm.cs</DependentUpon>
     </Compile>
