--- a/inventory_management/inventory_management.csproj
+++ b/inventory_management/inventory_management.csproj
@@ -119,6 +119,13 @@
     <Compile Include="Views\Forms\CustomersManageFrm.Designer.cs">
       <DependentUpon>CustomersManageFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Forms\Inventories\Inventory.cs" />
+    <Compile Include="Views\Forms\Inventories\InventoryManageFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Forms\Inventories\InventoryManageFrm.Designer.cs">
+      <DependentUpon>InventoryManageFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Forms\mainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,16 +134,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Forms\InventoryManageFrm.cs" />
-    <Compile Include="Views\Forms\InventoryManageFrm.Designer.cs">
-      <DependentUpon>InventoryManageFrm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Views\Forms\InventoryInfoForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\Forms\InventoryInfoForm.Designer.cs">
       <DependentUpon>InventoryInfoForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Interfaces\IInventoryView.cs" />
     <Compile Include="Views\Notification\NotificationManger.cs" />
     <Compile Include="Views\Forms\OrderManageFrm.cs">
       <SubType>Form</SubType>
@@ -172,6 +176,9 @@
     <EmbeddedResource Include="Views\Forms\CustomersManageFrm.resx">
       <DependentUpon>CustomersManageFrm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Forms\Inventories\InventoryManageFrm.resx">
+      <DependentUpon>InventoryManageFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -185,9 +192,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Views\Forms\InventoryManageFrm.resx">
-      <DependentUpon>InventoryManageFrm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\InventoryInfoForm.resx">
       <DependentUpon>InventoryInfoForm.cs</DependentUpon>
     </EmbeddedResource>
