--- a/inventory_management/inventory_management.csproj
+++ b/inventory_management/inventory_management.csproj
@@ -113,12 +113,13 @@
     <Compile Include="Views\Forms\Categories\CategoryManageFrm.designer.cs">
       <DependentUpon>CategoryManageFrm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Forms\CustomersManageFrm.cs">
+    <Compile Include="Views\Forms\Customers\CustomersManageFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Forms\CustomersManageFrm.Designer.cs">
+    <Compile Include="Views\Forms\Customers\CustomersManageFrm.Designer.cs">
       <DependentUpon>CustomersManageFrm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Forms\Customers\Customer.cs" />
     <Compile Include="Views\Forms\Inventories\Inventory.cs" />
     <Compile Include="Views\Forms\Inventories\InventoryManageFrm.cs">
       <SubType>Form</SubType>
@@ -140,14 +141,15 @@
     <Compile Include="Views\Forms\InventoryInfoForm.Designer.cs">
       <DependentUpon>InventoryInfoForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Forms\Orders\Order.cs" />
     <Compile Include="Views\Interfaces\ICustomerView.cs" />
     <Compile Include="Views\Interfaces\IInventoryView.cs" />
     <Compile Include="Views\Interfaces\IOrderView.cs" />
     <Compile Include="Views\Notification\NotificationManger.cs" />
-    <Compile Include="Views\Forms\OrderManageFrm.cs">
+    <Compile Include="Views\Forms\Orders\OrderManageFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Forms\OrderManageFrm.Designer.cs">
+    <Compile Include="Views\Forms\Orders\OrderManageFrm.Designer.cs">
       <DependentUpon>OrderManageFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\ProductManageFrm.cs">
@@ -175,7 +177,7 @@
     <EmbeddedResource Include="Views\Forms\Categories\CategoryManageFrm.resx">
       <DependentUpon>CategoryManageFrm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\Forms\CustomersManageFrm.resx">
+    <EmbeddedResource Include="Views\Forms\Customers\CustomersManageFrm.resx">
       <DependentUpon>CustomersManageFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\Inventories\InventoryManageFrm.resx">
@@ -197,7 +199,7 @@
     <EmbeddedResource Include="Views\Forms\InventoryInfoForm.resx">
       <DependentUpon>InventoryInfoForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\Forms\OrderManageFrm.resx">
+    <EmbeddedResource Include="Views\Forms\Orders\OrderManageFrm.resx">
       <DependentUpon>OrderManageFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Forms\ProductManageFrm.resx">
