Add inventory Methods

--- a/inventory_management/inventory_management.csproj
+++ b/inventory_management/inventory_management.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logic\Presenters\CategoryPresenter.cs" />
+    <Compile Include="Logic\Presenters\InventoryPresenter.cs" />
     <Compile Include="Logic\Services\CategoryServices.cs" />
     <Compile Include="Logic\Services\CustomerServices.cs" />
     <Compile Include="Logic\Services\DataBase.cs" />
@@ -142,6 +143,7 @@
       <DependentUpon>InventoryInfoForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\Orders\Order.cs" />
+    <Compile Include="Views\Interfaces\IBaseInterface.cs" />
     <Compile Include="Views\Interfaces\ICustomerView.cs" />
     <Compile Include="Views\Interfaces\IInventoryView.cs" />
     <Compile Include="Views\Interfaces\IOrderView.cs" />
