--- a/inventory_management/Properties/Settings.settings
+++ b/inventory_management/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="DbServer" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">OS7_SOFT\OS7DATABASE</Value>
+      <Value Profile="(Default)">.</Value>
     </Setting>
     <Setting Name="DbName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Inventory_system</Value>
