Adding notification Table

--- a/inventory_management/inventory_management.csproj
+++ b/inventory_management/inventory_management.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Compile Include="Logic\Presenters\CategoryPresenter.cs" />
     <Compile Include="Logic\Presenters\CustomerPresenter.cs" />
+    <Compile Include="Logic\Presenters\HomePresenters.cs" />
     <Compile Include="Logic\Presenters\InventoryPresenter.cs" />
     <Compile Include="Logic\Presenters\OrderPresenter.cs" />
     <Compile Include="Logic\Presenters\ProductPresenter.cs" />
@@ -92,6 +93,7 @@
     <Compile Include="Logic\Services\CategoryServices.cs" />
     <Compile Include="Logic\Services\CustomerServices.cs" />
     <Compile Include="Logic\Services\DataBase.cs" />
+    <Compile Include="Logic\Services\HomeServices.cs" />
     <Compile Include="Logic\Services\IDataHelper.cs" />
     <Compile Include="Logic\Services\InventoryServices.cs" />
     <Compile Include="Logic\Services\OrderServices.cs" />
@@ -125,6 +127,7 @@
       <DependentUpon>CustomersManageFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\Customers\Customer.cs" />
+    <Compile Include="Views\Forms\Home\Home.cs" />
     <Compile Include="Views\Forms\Inventories\Inventory.cs" />
     <Compile Include="Views\Forms\Inventories\InventoryManageFrm.cs">
       <SubType>Form</SubType>
@@ -151,10 +154,12 @@
     <Compile Include="Views\Forms\Suppliers\Supplier.cs" />
     <Compile Include="Views\Interfaces\IBaseInterface.cs" />
     <Compile Include="Views\Interfaces\ICustomerView.cs" />
+    <Compile Include="Views\Interfaces\IHomeView.cs" />
     <Compile Include="Views\Interfaces\IInventoryView.cs" />
     <Compile Include="Views\Interfaces\IOrderView.cs" />
     <Compile Include="Views\Interfaces\IProductView.cs" />
     <Compile Include="Views\Interfaces\ISuppliersView.cs" />
+    <Compile Include="Views\Notification\NotificationBox.cs" />
     <Compile Include="Views\Notification\NotificationManger.cs" />
     <Compile Include="Views\Forms\Orders\OrderManageFrm.cs">
       <SubType>Form</SubType>
